--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,10 @@
       <plugin>
         <!-- Build an executable JAR -->
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.2</version>
+        <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
+            <source>1.6</source>
+            <target>1.6</target>
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
